--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
-[build-system]  # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
+[build-system] # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
 requires = ["hatchling>=1.27.0"]
 build-backend = "hatchling.build"
 
-[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
+[project] # https://packaging.python.org/en/latest/specifications/pyproject-toml/
 name = "sentinelresponse"
 version = "0.0.0"
 description = "Enterprise incident response platform integrated with MISP,MITRE ATT&CK"
@@ -11,10 +11,9 @@ authors = [
   { name = "Luiz Gustavo Corrêa Filho", email = "zcorrea357@gmail.com" },
 ]
 requires-python = ">=3.10,<4.0"
-dependencies = [
-]
+dependencies = []
 
-[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
+[project.urls] # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
 homepage = "https://github.com/SentinelIQ/SentinelResponse"
 source = "https://github.com/SentinelIQ/SentinelResponse"
 changelog = "https://github.com/SentinelIQ/SentinelResponse/blob/main/CHANGELOG.md"
@@ -22,7 +21,7 @@ releasenotes = "https://github.com/SentinelIQ/SentinelResponse/releases"
 documentation = "https://github.com/SentinelIQ/SentinelResponse"
 issues = "https://github.com/SentinelIQ/SentinelResponse/issues"
 
-[dependency-groups]  # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
+[dependency-groups] # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
 dev = [
   "commitizen (>=4.3.0)",
   "coverage[toml] (>=7.6.10)",
@@ -40,28 +39,28 @@ dev = [
   "typeguard (>=4.4.1)",
 ]
 
-[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
+[tool.commitizen] # https://commitizen-tools.github.io/commitizen/config/
 bump_message = "bump: v$current_version → v$new_version"
 tag_format = "v$version"
 update_changelog_on_bump = true
 version_provider = "uv"
 
-[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
+[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
 fail_under = 50
 precision = 1
 show_missing = true
 skip_covered = true
 
-[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
+[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
 branch = true
 command_line = "--module pytest"
 data_file = "reports/.coverage"
 source = ["src"]
 
-[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
+[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
 output = "reports/coverage.xml"
 
-[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
+[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
 junit_xml = "reports/mypy.xml"
 strict = true
 disallow_subclassing_any = false
@@ -73,13 +72,13 @@ show_error_codes = true
 show_error_context = true
 warn_unreachable = true
 
-[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
-addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=reports/pytest.xml"
+[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
+addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=reports/pytest.xml --junit-xml=reports/junit.xml --tb=short --disable-warnings"
 filterwarnings = ["error", "ignore::DeprecationWarning"]
 testpaths = ["src", "tests"]
 xfail_strict = true
 
-[tool.ruff]  # https://docs.astral.sh/ruff/settings/
+[tool.ruff] # https://docs.astral.sh/ruff/settings/
 fix = true
 line-length = 100
 src = ["src", "tests"]
@@ -89,7 +88,55 @@ target-version = "py310"
 docstring-code-format = true
 
 [tool.ruff.lint]
-select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "FLY", "FURB", "G", "I", "ICN", "INP", "INT", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TC", "TID", "TRY", "UP", "W", "YTT"]
+select = [
+  "A",
+  "ASYNC",
+  "B",
+  "BLE",
+  "C4",
+  "C90",
+  "D",
+  "DTZ",
+  "E",
+  "EM",
+  "ERA",
+  "F",
+  "FBT",
+  "FLY",
+  "FURB",
+  "G",
+  "I",
+  "ICN",
+  "INP",
+  "INT",
+  "ISC",
+  "LOG",
+  "N",
+  "NPY",
+  "PERF",
+  "PGH",
+  "PIE",
+  "PL",
+  "PT",
+  "PTH",
+  "PYI",
+  "Q",
+  "RET",
+  "RSE",
+  "RUF",
+  "S",
+  "SIM",
+  "SLF",
+  "SLOT",
+  "T10",
+  "T20",
+  "TC",
+  "TID",
+  "TRY",
+  "UP",
+  "W",
+  "YTT",
+]
 ignore = ["D203", "D213", "E501", "RET504", "S101", "S307"]
 unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
 
@@ -102,48 +149,48 @@ max-doc-length = 100
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
-[tool.poe.executor]  # https://github.com/nat-n/poethepoet
+[tool.poe.executor] # https://github.com/nat-n/poethepoet
 type = "simple"
 
 [tool.poe.tasks]
 
-  [tool.poe.tasks.docs]
-  help = "Generate this package's docs"
-  cmd = """
+[tool.poe.tasks.docs]
+help = "Generate this package's docs"
+cmd = """
     pdoc
       --docformat $docformat
       --output-directory $outputdirectory
       sentinelresponse
     """
 
-    [[tool.poe.tasks.docs.args]]
-    help = "The docstring style (default: numpy)"
-    name = "docformat"
-    options = ["--docformat"]
-    default = "numpy"
+[[tool.poe.tasks.docs.args]]
+help = "The docstring style (default: numpy)"
+name = "docformat"
+options = ["--docformat"]
+default = "numpy"
 
-    [[tool.poe.tasks.docs.args]]
-    help = "The output directory (default: docs)"
-    name = "outputdirectory"
-    options = ["--output-directory"]
-    default = "docs"
+[[tool.poe.tasks.docs.args]]
+help = "The output directory (default: docs)"
+name = "outputdirectory"
+options = ["--output-directory"]
+default = "docs"
 
-  [tool.poe.tasks.lint]
-  help = "Lint this package"
-  cmd = """
+[tool.poe.tasks.lint]
+help = "Lint this package"
+cmd = """
     pre-commit run
       --all-files
       --color always
     """
 
-  [tool.poe.tasks.test]
-  help = "Test this package"
+[tool.poe.tasks.test]
+help = "Test this package"
 
-    [[tool.poe.tasks.test.sequence]]
-    cmd = "coverage run"
+[[tool.poe.tasks.test.sequence]]
+cmd = "coverage run"
 
-    [[tool.poe.tasks.test.sequence]]
-    cmd = "coverage report"
+[[tool.poe.tasks.test.sequence]]
+cmd = "coverage report"
 
-    [[tool.poe.tasks.test.sequence]]
-    cmd = "coverage xml"
+[[tool.poe.tasks.test.sequence]]
+cmd = "coverage xml"
