--- a/.trunk/configs/ruff.toml
+++ b/.trunk/configs/ruff.toml
@@ -1,5 +1,74 @@
 # Generic, formatter-friendly config.
-select = ["B", "D3", "E", "F"]
+select = [
+  "A",
+  "ASYNC",
+  "B",
+  "BLE",
+  "C4",
+  "C90",
+  "D",
+  "DTZ",
+  "E",
+  "EM",
+  "ERA",
+  "F",
+  "FBT",
+  "FLY",
+  "FURB",
+  "G",
+  "I",
+  "ICN",
+  "INP",
+  "INT",
+  "ISC",
+  "LOG",
+  "N",
+  "NPY",
+  "PERF",
+  "PGH",
+  "PIE",
+  "PL",
+  "PT",
+  "PTH",
+  "PYI",
+  "Q",
+  "RET",
+  "RSE",
+  "RUF",
+  "S",
+  "SIM",
+  "SLF",
+  "SLOT",
+  "T10",
+  "T20",
+  "TC",
+  "TID",
+  "TRY",
+  "UP",
+  "W",
+  "YTT",
+]
 
 # Never enforce `E501` (line length violations). This should be handled by formatters.
-ignore = ["E501"]
+ignore = [
+  "D203",
+  "G",
+  "PERF203",
+  "B904",
+  "PT011",
+  "PLR0913",
+  "SLF001",
+  "S105",
+  "EM",
+  "PLR2004",
+  "PLR0912",
+  "C901",
+  "BLE001",
+  "D213",
+  "E501",
+  "RET504",
+  "S101",
+  "W505",
+  "S307",
+  "TRY",
+]
