--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,28 @@ select = [
   "W",
   "YTT",
 ]
-ignore = ["D203", "D213", "E501", "RET504", "S101", "S307"]
+ignore = [
+  "D203",
+  "G",
+  "PERF203",
+  "B904",
+  "PT011",
+  "PLR0913",
+  "SLF001",
+  "S105",
+  "EM",
+  "PLR2004",
+  "PLR0912",
+  "C901",
+  "BLE001",
+  "D213",
+  "E501",
+  "RET504",
+  "S101",
+  "W505",
+  "S307",
+  "TRY",
+]
 unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
 
 [tool.ruff.lint.flake8-tidy-imports]
