--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,8 @@ updates:
     schedule:
       interval: monthly
     commit-message:
-      prefix: "ci"
-      prefix-development: "ci"
+      prefix: ci
+      prefix-development: ci
       include: scope
     groups:
       ci-dependencies:
@@ -18,8 +18,8 @@ updates:
     schedule:
       interval: monthly
     commit-message:
-      prefix: "chore"
-      prefix-development: "build"
+      prefix: chore
+      prefix-development: build
       include: scope
     allow:
       - dependency-type: development
