--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,9 @@
 name: Publish
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   release:
     types:
@@ -8,9 +12,6 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: pypi
-    permissions:
-      id-token: write
 
     steps:
       - name: Checkout
