--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -16,17 +16,18 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - git-diff-check
   enabled:
     - actionlint@1.7.7
     - bandit@1.8.3
     - black@25.1.0
     - checkov@3.2.390
-    - git-diff-check
     - hadolint@2.12.1-beta
     - isort@6.0.1
     - markdownlint@0.44.0
     - prettier@3.5.3
-    - ruff@0.11.0
+    - ruff@0.11.1
     - taplo@0.9.3
     - trufflehog@3.88.18
     - yamllint@1.36.2
