--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,12 @@
 default_install_hook_types: [commit-msg, pre-commit]
 default_stages: [pre-commit, manual]
 fail_fast: true
+
 repos:
   - repo: meta
     hooks:
       - id: check-useless-excludes
+
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
@@ -15,6 +17,7 @@ repos:
       - id: rst-directive-colons
       - id: rst-inline-touching-normal
       - id: text-unicode-replacement-char
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
@@ -43,6 +46,7 @@ repos:
         args: [--pytest-test-first]
       - id: trailing-whitespace
         types: [python]
+
   - repo: local
     hooks:
       - id: commitizen
@@ -52,22 +56,20 @@ repos:
         require_serial: true
         language: system
         stages: [commit-msg]
-      - id: ruff-check
-        name: ruff check
-        entry: ruff check
-        args: [--force-exclude, --extend-fixable=ERA001, F401, F841, T201, T203]
+
+      - id: trunk-check
+        name: trunk check
+        entry: trunk check
+        args: [--diff=compact]
         require_serial: true
         language: system
         types_or: [python, pyi]
-      - id: ruff-format
-        name: ruff format
-        entry: ruff format
-        args: [--force-exclude]
+
+      - id: trunk-format
+        name: trunk fmt
+        entry: trunk
+        args: [fmt]
         require_serial: true
         language: system
+        pass_filenames: false
         types_or: [python, pyi]
-      - id: mypy
-        name: mypy
-        entry: mypy
-        language: system
-        types: [python]
